# LaMMa

./: CMakeLists.txt  README.md
src/: lamma.cpp  lamma.h
